[gd_scene load_steps=43 format=2]

[ext_resource path="res://fonts/Bohemian Typewriter.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://main_menu/main_menu.gd" type="Script" id=2]
[ext_resource path="res://transition/transition.tscn" type="PackedScene" id=3]
[ext_resource path="res://button_theme.tres" type="Theme" id=4]
[ext_resource path="res://main_menu/art/background/30.png" type="Texture" id=5]
[ext_resource path="res://main_menu/art/background/25.png" type="Texture" id=6]
[ext_resource path="res://main_menu/art/background/29.png" type="Texture" id=7]
[ext_resource path="res://main_menu/art/background/20.png" type="Texture" id=8]
[ext_resource path="res://main_menu/art/background/22.png" type="Texture" id=9]
[ext_resource path="res://main_menu/art/background/26.png" type="Texture" id=10]
[ext_resource path="res://main_menu/art/background/21.png" type="Texture" id=11]
[ext_resource path="res://main_menu/art/background/19.png" type="Texture" id=12]
[ext_resource path="res://main_menu/art/background/23.png" type="Texture" id=13]
[ext_resource path="res://main_menu/art/background/27.png" type="Texture" id=14]
[ext_resource path="res://main_menu/art/background/28.png" type="Texture" id=15]
[ext_resource path="res://main_menu/art/background/24.png" type="Texture" id=16]
[ext_resource path="res://main_menu/art/background/2.png" type="Texture" id=17]
[ext_resource path="res://main_menu/art/background/1.png" type="Texture" id=18]
[ext_resource path="res://main_menu/art/background/3.png" type="Texture" id=19]
[ext_resource path="res://main_menu/art/background/8.png" type="Texture" id=20]
[ext_resource path="res://main_menu/art/background/9.png" type="Texture" id=21]
[ext_resource path="res://main_menu/art/background/6.png" type="Texture" id=22]
[ext_resource path="res://main_menu/art/background/5.png" type="Texture" id=23]
[ext_resource path="res://main_menu/art/background/4.png" type="Texture" id=24]
[ext_resource path="res://main_menu/art/background/7.png" type="Texture" id=25]
[ext_resource path="res://main_menu/art/background/18.png" type="Texture" id=26]
[ext_resource path="res://main_menu/art/background/17.png" type="Texture" id=27]
[ext_resource path="res://main_menu/art/background/12.png" type="Texture" id=28]
[ext_resource path="res://main_menu/art/background/15.png" type="Texture" id=29]
[ext_resource path="res://main_menu/art/background/16.png" type="Texture" id=30]
[ext_resource path="res://main_menu/art/background/14.png" type="Texture" id=31]
[ext_resource path="res://main_menu/art/background/11.png" type="Texture" id=32]
[ext_resource path="res://main_menu/art/background/10.png" type="Texture" id=33]
[ext_resource path="res://main_menu/art/background/13.png" type="Texture" id=34]
[ext_resource path="res://shaders/Blur/blur.tres" type="Material" id=35]

[sub_resource type="AnimatedTexture" id=1]
flags = 5
frames = 30
fps = 16.0
frame_0/texture = ExtResource( 18 )
frame_1/texture = ExtResource( 17 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 19 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 24 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 23 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 22 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 25 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 20 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 21 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 33 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 32 )
frame_10/delay_sec = 0.0
frame_11/texture = ExtResource( 28 )
frame_11/delay_sec = 0.0
frame_12/texture = ExtResource( 34 )
frame_12/delay_sec = 0.0
frame_13/texture = ExtResource( 31 )
frame_13/delay_sec = 0.0
frame_14/texture = ExtResource( 29 )
frame_14/delay_sec = 0.0
frame_15/texture = ExtResource( 30 )
frame_15/delay_sec = 0.0
frame_16/texture = ExtResource( 27 )
frame_16/delay_sec = 0.0
frame_17/texture = ExtResource( 26 )
frame_17/delay_sec = 0.0
frame_18/texture = ExtResource( 12 )
frame_18/delay_sec = 0.0
frame_19/texture = ExtResource( 8 )
frame_19/delay_sec = 0.0
frame_20/texture = ExtResource( 11 )
frame_20/delay_sec = 0.0
frame_21/texture = ExtResource( 9 )
frame_21/delay_sec = 0.0
frame_22/texture = ExtResource( 13 )
frame_22/delay_sec = 0.0
frame_23/texture = ExtResource( 16 )
frame_23/delay_sec = 0.0
frame_24/texture = ExtResource( 6 )
frame_24/delay_sec = 0.0
frame_25/texture = ExtResource( 10 )
frame_25/delay_sec = 0.0
frame_26/texture = ExtResource( 14 )
frame_26/delay_sec = 0.0
frame_27/texture = ExtResource( 15 )
frame_27/delay_sec = 0.0
frame_28/texture = ExtResource( 7 )
frame_28/delay_sec = 0.0
frame_29/texture = ExtResource( 5 )
frame_29/delay_sec = 0.0

[sub_resource type="DynamicFont" id=2]
size = 66
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Environment" id=7]
background_mode = 4
glow_enabled = true
glow_levels/5 = false
glow_levels/6 = true
glow_levels/7 = true
glow_intensity = 0.94
glow_strength = 1.3
glow_blend_mode = 0
glow_bicubic_upscale = true
adjustment_enabled = true
adjustment_contrast = 3.0

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.709804, 0, 1, 1 )
material = ExtResource( 35 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin_setter" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="parent_container" type="VBoxContainer" parent="margin_setter"]
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="margin_setter/parent_container"]
margin_left = 365.0
margin_right = 658.0
margin_bottom = 75.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "Amortum"
align = 1

[node name="button_container" type="VBoxContainer" parent="margin_setter/parent_container"]
margin_left = 423.0
margin_top = 125.0
margin_right = 600.0
margin_bottom = 337.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_game" type="Button" parent="margin_setter/parent_container/button_container"]
margin_right = 177.0
margin_bottom = 38.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "New Game"

[node name="load_game" type="Button" parent="margin_setter/parent_container/button_container"]
margin_top = 58.0
margin_right = 177.0
margin_bottom = 96.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
disabled = true
enabled_focus_mode = 0
text = "Load Game"

[node name="credits" type="Button" parent="margin_setter/parent_container/button_container"]
margin_top = 116.0
margin_right = 177.0
margin_bottom = 154.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "Credits"

[node name="quit_game" type="Button" parent="margin_setter/parent_container/button_container"]
margin_top = 174.0
margin_right = 177.0
margin_bottom = 212.0
focus_mode = 0
custom_fonts/font = SubResource( 6 )
enabled_focus_mode = 0
text = "Quit Game"

[node name="prompt_inner_margin" type="MarginContainer" parent="margin_setter"]
visible = false
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 100
custom_constants/margin_top = 150
custom_constants/margin_left = 100
custom_constants/margin_bottom = 150

[node name="prompt_container" type="Panel" parent="margin_setter/prompt_inner_margin"]
margin_left = 100.0
margin_top = 150.0
margin_right = 924.0
margin_bottom = 350.0

[node name="prompt_label" type="Label" parent="margin_setter/prompt_inner_margin/prompt_container"]
margin_right = 824.0
margin_bottom = 120.0
size_flags_vertical = 7
text = "Your save file will be overwritten. Are you sure you want to go ahead and start a new game?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_container" type="HBoxContainer" parent="margin_setter/prompt_inner_margin/prompt_container"]
margin_top = 120.0
margin_right = 824.0
margin_bottom = 200.0
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yes_button" type="Button" parent="margin_setter/prompt_inner_margin/prompt_container/button_container"]
margin_left = 189.0
margin_top = 29.0
margin_right = 222.0
margin_bottom = 50.0
size_flags_horizontal = 6
size_flags_vertical = 4
text = "YES"

[node name="no_button" type="Button" parent="margin_setter/prompt_inner_margin/prompt_container/button_container"]
margin_left = 606.0
margin_top = 29.0
margin_right = 629.0
margin_bottom = 50.0
size_flags_horizontal = 6
size_flags_vertical = 4
text = "NO"

[node name="transition" parent="." instance=ExtResource( 3 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 7 )
[connection signal="pressed" from="margin_setter/parent_container/button_container/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="margin_setter/parent_container/button_container/load_game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="margin_setter/parent_container/button_container/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="margin_setter/parent_container/button_container/quit_game" to="." method="_on_quit_game_pressed"]
[connection signal="pressed" from="margin_setter/prompt_inner_margin/prompt_container/button_container/yes_button" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="margin_setter/prompt_inner_margin/prompt_container/button_container/no_button" to="." method="_on_no_button_pressed"]
